--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,10 @@
 html,
 body {
-  padding: 0;
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 a {
@@ -13,4 +14,8 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+#__next {
+  height: 100%;
 }
